# advent-of-code

./: .gitignore  CHANGELOG.md  project.clj
clj/: README.md  project.clj
doc/: intro.md
hs/: aoc-hs.cabal  stack.yaml
hs-2018/: aoc-hs.cabal  stack.yaml
hs-2018/src/: Main.hs
hs-2018/src/AoC2018/: P10.hs  P2.hs  P4.hs  P6.hs
hs-2019/: .gitignore  aoc2019.cabal  package.yaml
hs-2019/app/: Main.hs
hs-2019/benchmark/: Main.hs
hs-2019/src/: IntcodeComputer.hs  Lib.hs  Parse.hs  Prelude.hs  Puzzle.hs  Util.hs
hs-2019/src/Puzzles/: P1.hs  P10.hs  P11.hs  P12.hs  P13.hs  P2.hs  (+10 more)
hs-2019/test/: Spec.hs
hs-2021/: aoc2021.cabal  package.yaml  setup_problem.clj  setup_problem.fish  submit.clj
hs-2021/app/: Main.hs  Template.hs
hs-2021/src/: AocPrelude.hs  Parse.hs  Util.hs
hs-2021/templates/: Solution.template  Test.template
hs-2021/test/: P10Spec.hs  P11Spec.hs  P12Spec.hs  P13Spec.hs  P14Spec.hs  P15Spec.hs  P16Spec.hs  P17Spec.hs  P18Spec.hs  P1Spec.hs  P2Spec.hs  P3Spec.hs  P4Spec.hs  P5Spec.hs  P6Spec.hs  P7Spec.hs  P8Spec.hs  P9Spec.hs  TestPrelude.hs  UtilSpec.hs
hs-2022/: aoc2022.cabal  package.yaml  setup_problem.clj  submit.clj
hs-2022/app/: Main.hs
hs-2022/src/: AocPrelude.hs  Puzzle.hs  Util.hs
hs-2022/templates/: Main.template  Solution.template  Test.template
hs-2022/test/: P10Spec.hs  P1Spec.hs  P2Spec.hs  P3Spec.hs  P4Spec.hs  P5Spec.hs  P6Spec.hs  P7Spec.hs  P8Spec.hs  P9Spec.hs
hs/src/: AoC2018.hs  Main.hs
src/advent_2017_clj/: core.clj  day1.clj  day2.clj  day3.clj  day4.clj  util.clj
test/advent_2017_clj/: core_test.clj
(+48 files in other folders)
