name:                aoc-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/aoc-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable aoc
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       AoC2018
                     , AoC2018.P1
                     , AoC2018.P2
                     , AoC2018.P3
                     , AoC2018.P4
                     , AoC2018.P5
                     , AoC2018.P6
                     , AoC2018.P7
                     , AoC2018.P8
                     , AoC2018.P9
                     , AoC2018.P10
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
                     , ExistentialQuantification
  ghc-options:         -O2
  build-depends:       base >= 4.7 && < 5
                     , universum
                     , megaparsec
                     , containers
                     , unordered-containers
                     , multiset
                     , mtl
                     , vector
                     , deque